# smobotest

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/components/: AddCharacter.vue  CharacterView.vue
src/plugins/: vuetify.js
src/views/: AboutView.vue
