[package]
authors = ["zhaoygcq"]
default-run = "smobot-test"
description = "a md editor built by vue3 and tauri"
edition = "2021"
license = "MIT"
name = "smobot-test"
rust-version = "1.57"
version = "0.0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.0", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.0.0", features = ["api-all", "system-tray", "updater"] }
window-vibrancy = {version = "0.3.2"}

[dependencies.tauri-plugin-store]
branch = "dev"
git = "https://github.com/tauri-apps/tauri-plugin-store"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
